--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -38,9 +38,15 @@ dependencies:
   firebase_core: ^2.29.0
   cloud_firestore: ^4.16.1
   flutter_webrtc: ^0.10.3
-  image_picker: ^1.0.7
   permission_handler: ^11.3.1
+  archive: ^3.4.10
+  video_player: ^2.8.6
+  firebase_auth: ^4.19.5
+  fluttertoast: ^8.2.5
+  image_picker: ^1.1.1
 
+  mime: any
+  device_info_plus: ^10.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,7 +73,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/config.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
