--- a/flutter/ios/Runner/Info.plist
+++ b/flutter/ios/Runner/Info.plist
@@ -45,8 +45,14 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>NSPhotoLibraryUsageDescription</key>
-<string>This app requires access to the photo library to attach images.</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>This app needs access to the microphone to record audio.</string>
+<key>NSCameraUsageDescription</key>
+<string>This app needs access to the camera to record video.</string>
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>This app needs access to your photo library to save recordings.</string>
+<key>NSPhotoLibraryUsageDescription</key>
+<string>This app needs access to your photo library to select files.</string>
 
 </dict>
 </plist>
