--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
 
   mime: any
   device_info_plus: ^10.1.0
+  shared_preferences: ^2.2.3
+  flutter_sound: ^9.4.15
+  path_provider: ^2.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
