--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_webrtc: ^0.10.3
   permission_handler: ^11.3.1
   archive: ^3.4.10
-  video_player: ^2.8.6
+  video_player: ^2.8.7
   firebase_auth: ^4.19.5
   fluttertoast: ^8.2.5
   image_picker: ^1.1.1
@@ -50,6 +50,8 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_sound: ^9.4.15
   path_provider: ^2.1.3
+  chewie: ^1.8.1
+  audioplayers: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
