--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.29.0
-  cloud_firestore: ^4.16.1
-  flutter_webrtc: ^0.10.3
+  firebase_core: ^3.2.0
+  cloud_firestore: ^5.1.0
+  flutter_webrtc: ^0.11.5
   permission_handler: ^11.3.1
   archive: ^3.4.10
   video_player: ^2.8.7
-  firebase_auth: ^4.19.5
+  firebase_auth: ^5.1.2
   fluttertoast: ^8.2.5
   image_picker: ^1.1.1
 
@@ -52,6 +52,9 @@ dependencies:
   path_provider: ^2.1.3
   chewie: ^1.8.1
   audioplayers: ^6.0.0
+  firebase_storage: ^12.1.1
+  gallery_saver: ^2.3.2
+  image_gallery_saver: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -79,7 +82,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/config.json
+  #  - assets/config.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
