--- a/flutter/macos/Runner/Configs/AppInfo.xcconfig
+++ b/flutter/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = privichat_flutter
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.privichatFlutter
+PRODUCT_BUNDLE_IDENTIFIER = com.shaiws.privichat
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
