--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   firebase_storage: ^12.1.1
   gallery_saver: ^2.3.2
   image_gallery_saver: ^2.0.3
+  change_app_package_name: ^1.3.0
+  audio_session: ^0.1.21
 dev_dependencies:
   flutter_test:
     sdk: flutter
