--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   image_gallery_saver: ^2.0.3
   change_app_package_name: ^1.3.0
   audio_session: ^0.1.21
+  intl: ^0.19.0
+  ffmpeg_kit_flutter: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,6 +69,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: "^0.13.1"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
