--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   audio_session: ^0.1.21
   intl: ^0.19.0
   ffmpeg_kit_flutter: ^6.0.3
+  media_store_plus: ^0.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
